<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_margin="5dp">

            <TextView
                android:layout_width="match_parent"
                android:layout_height = "wrap_content"
                android:textSize="20sp"
                android:textColor="@android:color/holo_blue_dark"
                android:text="@string/lblUserName" />

            <EditText
                android:id="@+id/txtUser"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="30sp"
                android:textColor="@color/white"
                android:inputType="text"
                android:hint="@string/lblUserName" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height = "wrap_content"
                android:textSize="20sp"
                android:textColor="@android:color/holo_blue_dark"
                android:text="@string/lblPass" />

            <EditText
                android:id="@+id/txtPass"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPassword"
                android:textSize="30sp"
                android:textColor="@color/white"
                android:hint="@string/lblPass" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height = "wrap_content"
                android:textSize="20sp"
                android:textColor="@android:color/holo_blue_dark"
                android:text="@string/lblFname" />

            <EditText
                android:id="@+id/firstname"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="30sp"
                android:textColor="@color/white"
                android:inputType="textPersonName"
                android:hint="@string/lblFname" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="20sp"
                android:textColor="@android:color/holo_blue_dark"
                android:text="@string/lblLname" />

            <EditText
                android:id="@+id/lastname"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="30sp"
                android:hint="@string/lblLname"
                android:textColor="@color/white"
                android:inputType="textPersonName" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="20sp"
                android:textColor="@android:color/holo_blue_dark"
                android:text="@string/lblAddress" />

            <EditText
                android:id="@+id/address"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="30sp"
                android:textColor="@color/white"
                android:inputType="textMultiLine"
                android:hint="@string/lblAddress" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="20sp"
                android:textColor="@android:color/holo_blue_dark"
                android:text="@string/lblEmail" />

            <EditText
                android:id="@+id/email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="30sp"
                android:textColor="@color/white"
                android:inputType="textEmailAddress"
                android:hint="@string/lblEmail" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="20sp"
                android:textColor="@android:color/holo_blue_dark"
                android:text="@string/lblSex" />

            <Spinner
                android:id="@+id/sex"
                android:layout_width="match_parent"
                android:layout_height="30dp"
                android:textColor="@color/black"
                android:entries="@array/OptGender" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="20sp"
                android:textColor="@android:color/holo_blue_dark"
                android:text="@string/lblContNum" />

            <EditText
                android:id="@+id/contact"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="30sp"
                android:inputType="number"
                android:textColor="@color/white"
                android:hint="@string/lblContNum" />

            <Button
                android:id="@+id/btnRegister"
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:layout_gravity="center"
                android:layout_marginBottom="20dp"
                android:text="Register"
                android:textSize="20sp" />
        </LinearLayout>
    </ScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>