<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    android:layout_margin="5dp"
    tools:context=".AdminAccess">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="40sp"
        android:text="ADMIN PAGE"
        android:layout_margin="70dp"/>


    <TextView
        android:layout_width="wrap_content"
        android:layout_height = "wrap_content"
        android:textSize="20sp"
        android:textColor="@android:color/holo_blue_dark"
        android:text="@string/lblUserName" />

    <EditText
        android:id="@+id/txtUserName"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="3dp"
        android:layout_marginBottom="15dp"
        android:inputType="none"
        android:hint="Username"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height = "wrap_content"
        android:textSize="20sp"
        android:textColor="@android:color/holo_blue_dark"
        android:text="@string/lblFname" />

    <EditText
        android:id="@+id/txtFirstName"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="3dp"
        android:layout_marginBottom="15dp"
        android:inputType="none"
        android:hint="First Name"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height = "wrap_content"
        android:textSize="20sp"
        android:textColor="@android:color/holo_blue_dark"
        android:text="@string/lblLname" />

    <EditText
        android:id="@+id/txtLastName"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="3dp"
        android:layout_marginBottom="15dp"
        android:inputType="none"
        android:hint="@string/lblLname"/>

    <Button
        android:id="@+id/btnAccept"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:text="Accept"
        android:textSize="20sp"
        android:layout_marginTop="20dp"/>

    <Button
        android:id="@+id/btnReject"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:text="Reject"
        android:textSize="20sp"
        android:layout_marginTop="20dp"/>





</LinearLayout>